--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: whitesmoke;
+  min-width: 100vw;
+  min-height: 100vh;
+}
