--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,4 +7,5 @@ body {
   background-color: whitesmoke;
   min-width: 100vw;
   min-height: 100vh;
+  font-family: "Inter", system-ui, -apple-system, sans-serif;
 }
