add activities and css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
 
 body {
   background-color: whitesmoke;
+  background-image: url("../public/assets/meshbg.png");
+  background-position: right;
   min-width: 100vw;
   min-height: 100vh;
   font-family: "Inter", system-ui, -apple-system, sans-serif;
